Miniframework terminado y reubicación de ficheros

--- a/P4_DAGSS/Miniframework_DAGSS/.project
+++ b/P4_DAGSS/Miniframework_DAGSS/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>P4_DAGSS</name>
+	<name>Miniframework_DAGSS</name>
 	<comment></comment>
 	<projects>
 	</projects>
